# meal_assistant

./: .gitignore  README.md  main.py  meals.db  pyproject.toml  run_server.py
meal_assistant/ai/: agent.py  api.py  prompts.py
meal_assistant/db/: sqlite.py
meal_assistant/models/: food.py
src/ai/: agent.py  prompts.py
src/api/: routes.py
src/db/: meals_repository.py
src/models/: api.py
tests/: test_sqlite.py
tests/test_db/: test_meals_repository.py
